# comp0034-wk9

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
activities/: 1-dash.md  1-flask.md  1-testintro.md  2-dash.md  2-flask.md  3-flask.md
data/: latlon.csv  medals.xlsx  paralympic_events.csv
src/dash_sqlalchemy_example/: add_data.py  app.py  chart.py  models.py  server.py
src/flask_iris/: __init__.py  config.py  create_ml_model.py  forms.py  model.pkl  routes.py
src/flask_iris/templates/: index.html  layout.html
src/paralympics_dash/: create_db_dash.py  figures.py  layout_elements.py  paralympics_dash.py  paralympics_dash.sqlite
src/paralympics_dash_multi/: figures.py  layout_charts.py  layout_events.py  paralympics.sqlite  paralympics_app.py
src/paralympics_dash_multi/pages/: charts.py  events.py
src/paralympics_flask/: __init__.py  figures.py  forms.py  models.py  utilities.py  views.py
src/paralympics_flask/templates/: add_event.html  base.html  chart.html  event.html  form_macros.html  index.html  navbar.html
src/paralympics_rest/: __init__.py  error_handlers.py  models.py  routes.py  schemas.py  utilities.py
